# mul2leftshift

./: .gitignore  CMakeLists.txt  LICENSE  Mul2LeftShiftPass.cpp  README.md
examples/: after-opt.ll  after.c  after.ll  before.c  before.ll
